# pnk-pkv

./: .gitignore  CMakeLists.txt  README.md  References.txt  main.c  scratchpad.c
inc/pnk/: c23_compatibility.h  media_facade.h
lib/ffmpeg/doc/: ffmpeg-all.html
lib/ffmpeg/include/libavutil/: ffversion.h
lib/ffmpeg/lib/pkgconfig/: libavdevice.pc  libavfilter.pc
lib/pnk/: c17_compatibility.h  media_facade.h
